# uploader

./: .gitignore  package-lock.json  package.json  sql.sql  wrangler.toml
infer_wasm/: Cargo.toml
infer_wasm/src/: lib.rs
src/: index.html  index.ts  list.html
