[package]
name = "infer_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
infer = { version = "0.13.0", default-features = false }
js-sys = "0.3.63"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
web-sys = { version = "0.3.63", features = ["ReadableStream", "ReadableStreamDefaultReader"] }

[profile.release]
lto = true
